--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
       socket.on('time', function(timeString) {
         el.innerHTML = 'Server time: ' + timeString;
       });
-    </script> ghhhh
+    </script>t
   </body>
 </html>
